fixed lower case branding

--- a/apps/docs/api-reference/introduction.mdx
+++ b/apps/docs/api-reference/introduction.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'API Reference'
-description: 'Local server and cloud APIs for BTCA'
+description: 'Local server and cloud APIs for btca'
 ---
 
-BTCA exposes two HTTP surfaces:
+btca exposes two HTTP surfaces:
 
 - **Local server API**: runs on your machine, no authentication required.
 - **Cloud API**: hosted services that require a Bearer API key.
