--- a/apps/docs/guides/authentication.mdx
+++ b/apps/docs/guides/authentication.mdx
@@ -5,7 +5,7 @@ description: 'Connect providers locally and link your cloud API key'
 
 ## Local provider auth (btca-server)
 
-BTCA reads credentials from OpenCode's auth storage:
+btca reads credentials from OpenCode's auth storage:
 
 - macOS/Linux: `~/.local/share/opencode/auth.json`
 - Windows: `%APPDATA%/opencode/auth.json`
