--- a/apps/docs/guides/cli-reference.mdx
+++ b/apps/docs/guides/cli-reference.mdx
@@ -125,7 +125,7 @@ All remote commands require an API key linked with `btca remote link`.
 
 ### `btca remote link`
 
-Authenticates with the BTCA cloud API.
+Authenticates with the btca cloud API.
 
 Options:
 
