--- a/apps/docs/index.mdx
+++ b/apps/docs/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'BTCA Docs'
+title: 'btca Docs'
 description: 'Local and cloud APIs for better-context search'
 ---
 
-BTCA is a CLI + local server + cloud sandbox for fast, accurate codebase lookup.
+btca is a CLI + local server + cloud sandbox for fast, accurate codebase lookup.
 
 Use the guides to get set up, then jump into the API reference for exact request and
 response shapes.
