--- a/apps/docs/guides/quickstart.mdx
+++ b/apps/docs/guides/quickstart.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'Quickstart'
-description: 'Install BTCA, initialize a project, and run your first query'
+description: 'Install btca, initialize a project, and run your first query'
 ---
 
 ## 1) Install the CLI
 
-BTCA requires Bun.
+btca requires Bun.
 
 ```bash
 bun add -g btca
