--- a/apps/docs/guides/mcp.mdx
+++ b/apps/docs/guides/mcp.mdx
@@ -5,7 +5,15 @@ description: 'Connect the btca MCP server to your agents'
 
 [Get your MCP API key](https://btca.dev/app/settings?tab=mcp)
 
-Use the btca MCP server to query cloud resources from your agent of choice.
+Use the btca MCP server to query resources from your agent of choice. There are two options:
+
+- **Cloud MCP**: Runs on btca’s hosted servers and uses your btca subscription. Requires an API key.
+- **Local MCP**: Runs entirely on your machine using local resources. No API key required.
+
+To scaffold configs automatically, run:
+
+- `btca mcp local`
+- `btca mcp remote`
 
 ## Add to `AGENTS.md`
 
@@ -44,9 +52,11 @@ The resources available are defined by the end user in their btca dashboard. If 
 
 ## Configure your agent
 
+Each agent supports both **cloud** (HTTP) and **local** (stdio) MCP servers. Use the examples below to pick the option you want.
+
 ### Cursor
 
-In `.cursor/mcp.json`:
+Cloud (HTTP) in `.cursor/mcp.json`:
 
 ```json
 {
@@ -63,9 +73,22 @@ In `.cursor/mcp.json`:
 
 Reference: [Cursor MCP docs](https://cursor.com/docs/context/mcp#using-mcpjson)
 
+Local (stdio) in `.cursor/mcp.json`:
+
+```json
+{
+	"mcpServers": {
+		"btca-local": {
+			"command": "bunx",
+			"args": ["btca", "mcp"]
+		}
+	}
+}
+```
+
 ### Codex
 
-In `config.toml`, and add the API key to your environment variables (for example in `.zshenv`):
+Cloud (HTTP) in `config.toml`, and add the API key to your environment variables (for example in `.zshenv`):
 
 ```toml
 [mcp_servers.btca]
@@ -76,9 +99,15 @@ url = "https://btca.dev/api/mcp"
 
 Reference: [Codex MCP docs](https://developers.openai.com/codex/mcp/)
 
+Local (stdio) via CLI:
+
+```bash
+codex mcp add btca-local -- bunx btca mcp
+```
+
 ### Claude Code
 
-In the CLI:
+Cloud (HTTP) in the CLI:
 
 ```bash
 claude mcp add --transport http better-context https://btca.dev/api/mcp \
@@ -87,9 +116,15 @@ claude mcp add --transport http better-context https://btca.dev/api/mcp \
 
 Reference: [Claude Code MCP docs](https://code.claude.com/docs/en/mcp#installing-mcp-servers)
 
+Local (stdio) in the CLI:
+
+```bash
+claude mcp add --transport stdio btca-local -- bunx btca mcp
+```
+
 ### OpenCode
 
-In `opencode.json`:
+Cloud (HTTP) in `opencode.json`:
 
 ```json
 {
@@ -108,3 +143,18 @@ In `opencode.json`:
 ```
 
 Reference: [OpenCode MCP docs](https://opencode.ai/docs/mcp-servers/)
+
+Local (stdio) in `opencode.json`:
+
+```json
+{
+	"$schema": "https://opencode.ai/config.json",
+	"mcp": {
+		"btca-local": {
+			"type": "local",
+			"command": ["bunx", "btca", "mcp"],
+			"enabled": true
+		}
+	}
+}
+```
