first pass on web resource

--- a/apps/docs/api-reference/local/config-resources.mdx
+++ b/apps/docs/api-reference/local/config-resources.mdx
@@ -3,4 +3,4 @@ title: 'Add a resource'
 openapi: 'POST /config/resources'
 ---
 
-Adds a git or local resource to the current config.
+Adds a git, local, or website resource to the current config.
