--- a/apps/docs/api-reference/local/resources.mdx
+++ b/apps/docs/api-reference/local/resources.mdx
@@ -3,4 +3,4 @@ title: 'List resources'
 openapi: 'GET /resources'
 ---
 
-Lists all configured resources from the active config.
+Lists all configured resources from the active config (git, local, and website).
