--- a/apps/docs/guides/authentication.mdx
+++ b/apps/docs/guides/authentication.mdx
@@ -38,8 +38,8 @@ btca wipe
 `btca connect` performs OAuth for `openai` and `github-copilot`, prompts for API keys when
 required, and falls back to `opencode auth --provider <provider>` for other providers.
 
-`btca wipe` is a destructive full reset that removes local BTCA config/data and OpenCode auth
-credentials for all providers (with a confirmation prompt unless `--yes` is passed).
+`btca wipe` removes BTCA config files in the current directory and global BTCA config files
+(with a confirmation prompt unless `--yes` is passed).
 
 For `github-copilot`, btca uses device flow OAuth and opens a browser prompt to complete
 the sign-in.
