npm resource on web

--- a/apps/docs/api-reference/cloud/mcp.mdx
+++ b/apps/docs/api-reference/cloud/mcp.mdx
@@ -3,4 +3,4 @@ title: 'MCP JSON-RPC'
 openapi: 'POST /api/mcp'
 ---
 
-Invokes MCP tools such as `listResources`, `ask`, `addResource`, and `sync`.
+Invokes MCP tools such as `listResources`, `ask`, and `addResource`.
